# FTodoX

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  default.yaml  test.yaml
examples/themes/: default.yaml  gruvmode.yaml
examples/themes/blue_adventure/: no_tasks_banner.txt  theme.yaml
examples/themes/gruvmode/: gruvmode.yaml  no_tasks_banner.txt  theme.yaml
examples/themes/meteorite_lain/: dashboard_banner.txt  theme.yaml
include/: Transformer.hpp  Utils.hpp  todoCore.hpp  todoUi.hpp  transforms.hpp
src/: checkbox.cpp  dropdown.cpp  enco.cpp  input.cpp  main.cpp  simple_slider.cpp  split.cpp  tab_vert.cpp  test.cpp  todoTest.cpp  toggle.cpp  tr.cpp  yaml.cpp
